fixed news page overflow not covering side bar

--- a/src/styles/_news.scss
+++ b/src/styles/_news.scss
@@ -8,7 +8,6 @@
 
 .news-card {
   overflow-x: hidden;
-  z-index: 20;
   width: 100%;
   text-decoration: none;
   background-color: #f1f1f1;
@@ -53,6 +52,7 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
+  z-index: 12;
   width: 100vw;
   background-color: rgba(0, 0, 0, 0.377);
 }
